# MFC_ODBC

./: README.md
php/: display_table_class.php  index.html  search.php
scripts/: compile.sh
src/: CMakeLists.txt  database_process.c  file_process.c  link_list.c  main.c  mysql_fun.c
src/include/: common.h  database_process.h  file_process.h  link_list.h  mysql_fun.h
src/lib/: libmysql.so.16.0.0
src/mysql_include/: my_config.h  my_global.h
tmp/: stu
